2006-12-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Use C++ vectors instead of evil C arrays.
        In fact it's also because variable size C-style arrays are not
        standard C++ (although they're provided by G++ as a GNU extension).
	* src/utils/move.cc,
	* src/utils/urbicycle.cc,
	* src/utils/urbiscale.cc: Use vectors.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix include.
	* src/liburbi/umain.cc: libport/windows.hh is now libport/windows.h.

2006-12-07  Akim Demaille  <demaille@gostai.com>

	Fix location of config.h
	* flags.mk: Actually don't point to sdk/, only libport uses
	config.h.

2006-12-07  Akim Demaille  <akim@lrde.epita.fr>

	Use sdk/config.h
	* configure.ac: No longer use src/config.h, since sdk/config.h
	exists, and autoheader only creates *one* config.h.in: the first
	one it sees.  This solves a bootstrapping failure.
	* flags.mk: Fix sdk/config.h.
	* src/examples/Makefile.am: Simplify.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Update sdk
	* Makefile.am (ACLOCAL_AMFLAGS): Pass -I sdk.
	* configure.ac: Use URBI_SDK_DIRS.
	* src/liburbi/umain.cc: Use libport/windows.hh.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	uvar-common.cc
	* src/liburbi/uobject/uvar-common.cc: New.
	* src/liburbi/uobject/uobject.mk, src/liburbi/uvar.cc: Adjust.

2006-11-29  Matthieu Nottale  <nottale@gostai.com>

	Add a callback that displays errors even if debug is disabled
	* src/liburbi/uobject.cc: Do it.

2006-11-28  Matthieu Nottale  <nottale@gostai.com>

	uped sdk, add missing SETCAST for bool and const std::string
	* src/liburbi/uobject/urbi/uobject.hh.template: add missing
	SETCAST for bool and const std::string.

2006-11-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Patch for Win32/VC++ and code cleanup
	* configure.ac: Invoke URBI_PTHREAD. This also defines the
	  AM_CONDITIONAL WIN32 (required for src/examples/Makefile.am).
	* src/examples/Makefile.am: Link with libjpeg.

	* src/liburbi/uclient.cc,