@@ -1,5 +1,15 @@
 2006-12-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
+	Fix includes: use libport's windows.h.
+	* src/examples/monitor.cc,
+	* src/examples/urbibandwidth.cc,
+	* src/examples/urbiping.cc,
+	* src/examples/urbiplay.cc,
+	* src/examples/urbisendbin.cc,
+	* src/examples/urbitalkie.cc: Here.
+
+2006-12-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
 	Use C++ vectors instead of evil C arrays.
         In fact it's also because variable size C-style arrays are not
         standard C++ (although they're provided by G++ as a GNU extension).
